# cas-typescript-sdk

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  build-node.sh  index.d.ts  index.js  index.node  jsr.json  package-lock.json  package.json  tsconfig.json
benchmarks/: README.md  password-hashers.bench.ts  symmetric.bench.ts
docs/: EXAMPLES.md
src/: EASConfiguration.ts  index.ts  lib.rs
src-ts/: cas-configuration.ts  global.d.ts  index.ts
src-ts/asymmetric/: index.ts  (+1 more)
test/: ed25519-dalek-service.spec.ts  hybrid-encryption-service.spec.ts  password-service.spec.ts  rsa-service.spec.ts  signature-service.spec.ts  symmetric-encryption-service.spec.ts  token-service-service.spec.ts
test-ts/: asymmetric.test.spec.ts  digital-signature.test.spec.ts  hasher.test.spec.ts  hmac.test.spec.ts  hybrid.test.spec.ts  insecure-channel.test.spec.ts  key-exchange-test.spec.ts  key-exchange.test.spec.ts  password-hasher-test.spec.ts  password-hasher.test.spec.ts  sponges.test.spec.ts  symmetric.test.spec.ts
tests/: aes-fips.spec.ts  aes-gcm-siv.spec.ts  asymmetric.spec.ts  chacha20-poly1305.spec.ts  compression.spec.ts  digital-signature.spec.ts  ed25519.spec.ts  hasher.spec.ts  hmac.spec.ts  hybrid.spec.ts  insecure-channel.spec.ts  key-exchange.spec.ts  ml-kem.spec.ts  password-hasher.spec.ts  pbkdf2.spec.ts  slh-dsa.spec.ts  sponges.test.ts  symmetric.test.ts  wycheproof-aes-gcm-siv.spec.ts  wycheproof-aes-gcm.spec.ts  wycheproof-chacha20-poly1305.spec.ts  wycheproof-ed25519.spec.ts  wycheproof-hmac.spec.ts  wycheproof-ml-kem.spec.ts  wycheproof-x25519.spec.ts
(+183 files in other folders)
