[package]
name = "cas-typescript-sdk-napi"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
napi = "2"
napi-derive = "2"
rand = "0.8.5"
rand_chacha = "0.3.1"
rayon = "1.10.0"
csbindgen = "1.9.1"
cas-lib = "0.1.3"

[build-dependencies]
napi-build = "1"