[package]
name = "cas-typescript-sdk-napi"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
napi = "2.16.17"
napi-derive = "2.16.13"
csbindgen = "1.9.3"
cas-lib = "0.2.56"
zeroize = "1.8.1"
zeroizing-alloc = "0.1.0"

[build-dependencies]
napi-build = "1"
