[package]
name = "cas-typescript-sdk-napi"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
napi = "3"
napi-derive = "3"
csbindgen = "1.9.3"
cas-lib = { version = "=0.2.72" }
zeroize = "1.8.1"
zeroizing-alloc = "0.1.0"

[build-dependencies]
napi-build = "1"
